--- a/app/client/style/app.css
+++ b/app/client/style/app.css
@@ -1,5 +1,5 @@
-input {
-    height: 50%;
-    margin-top: 5%;
-    border: none;
-}
+/*input {*/
+    /*height: 50%;*/
+    /*margin-top: 5%;*/
+    /*border: none;*/
+/*}*/
