--- a/public/style.css
+++ b/public/style.css
@@ -51,8 +51,8 @@ q:before, q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
-}input {
-    height: 50%;
-    margin-top: 5%;
-    border: none;
-}
+}/*input {*/
+    /*height: 50%;*/
+    /*margin-top: 5%;*/
+    /*border: none;*/
+/*}*/
