--- a/app/client/index.ejs
+++ b/app/client/index.ejs
@@ -3,6 +3,8 @@
     {{helmet.title.toString()|safe}}
     {{helmet.meta.toString()|safe}}
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#db5945">
     {{helmet.link.toString()|safe}}
 </head>
 <body>
